--- a/src/translations/fi.json
+++ b/src/translations/fi.json
@@ -158,47 +158,135 @@
   "features.layout.accordion": "Harmonikkanäkymä",
 
   "pricing.page.title": "Hinnoittelu - Lyyli.ai",
-  "pricing.page.description": "Valitse oikea Lyyli-paketti asiantuntijatiimillesi. Läpinäkyvä hinnoittelu mitattavalla ROI:lla asiantuntijapalveluorganisaatioille.",
+  "pricing.page.description": "Lyyli.ai:n selkeä hinnoittelu yrityksesi tarpeisiin. Kokeile ROI-laskuriamme ja näe kuinka paljon voit säästää tekoälyavusteisella viestinnällä.",
   
-  "pricing.hero.title": "Läpinäkyvä hinnoittelu asiantuntijatiimeille",
-  "pricing.hero.subtitle": "Valitse tiimisi koon ja viestintätarpeiden mukainen paketti. Kaikki paketit sisältävät yritystason turvallisuuden ja monikielisen tuen.",
+  "pricing.tagline": "Hinnoittelupaketit",
+  "pricing.title": "Selkeä, läpinäkyvä hinnoittelu",
+  "pricing.subtitle": "Valitse yrityksesi tarpeisiin sopiva paketti. Kaikki paketit sisältävät keskeisen tekoälytoiminnallisuuden.",
+  "pricing.monthly": "Kuukausittain",
+  "pricing.yearly": "Vuosittain",
+  "pricing.save": "Säästä",
+  "pricing.savePerYear": "Säästä {amount}€ vuodessa",
+  "pricing.perMonth": "/kuukausi",
+  "pricing.perYear": "/vuosi",
+  "pricing.custom": "Räätälöity",
   
-  "pricing.starter.name": "Aloittelija",
-  "pricing.starter.price": "49€",
-  "pricing.starter.period": "kuukaudessa",
-  "pricing.starter.description": "Täydellinen pienille asiantuntijatiimeille, jotka aloittavat tekoälyviestinnän",
-  "pricing.starter.users": "Enintään 10 käyttäjää",
-  "pricing.starter.conversations": "100 tekoälykeskustelua viikossa",
-  "pricing.starter.integrations": "Slack- ja sähköposti-integraatio",
-  "pricing.starter.support": "Sähköpostituki",
-  "pricing.starter.cta": "Aloita maksuton kokeilu",
+  "pricing.free": {
+    "name": "Ilmainen",
+    "description": "Täydellinen kokeilukäyttöön, yksinyrittäjille ja pienille yhdistyksille.",
+    "cta": "Aloita ilmaiseksi"
+  },
+  "pricing.starter": {
+    "name": "Starter",
+    "description": "Ihanteellinen pienille toimijoille ja yksittäisille ammattilaisille.",
+    "cta": "Aloita ilmainen kokeilu"
+  },
+  "pricing.growth": {
+    "name": "Growth",
+    "description": "Kaikki mitä tarvitset kasvavalle tiimille ja laajenevan yrityksen.",
+    "cta": "Aloita kasvu"
+  },
   
-  "pricing.professional.name": "Ammattilainen",
-  "pricing.professional.price": "149€",
-  "pricing.professional.period": "kuukaudessa",
-  "pricing.professional.description": "Ihanteellinen kasvaville tiimeille, jotka tarvitsevat edistynyttä viestinnän hallintaa",
-  "pricing.professional.users": "Enintään 50 käyttäjää",
-  "pricing.professional.conversations": "500 tekoälykeskustelua viikossa",
-  "pricing.professional.integrations": "Täysi Slack-, Teams- ja sähköposti-integraatio",
-  "pricing.professional.analytics": "Viestinnän analytiikkakojelauta",
-  "pricing.professional.audit": "Auditointijäljet ja versiohistoria",
-  "pricing.professional.support": "Ensisijainen sähköposti- ja chat-tuki",
-  "pricing.professional.cta": "Aloita maksuton kokeilu",
-  "pricing.professional.popular": "Suosituin",
+  "pricing.professional": {
+    "name": "Professional",
+    "description": "Täydellinen ratkaisu koko organisaation käyttöön.",
+    "cta": "Siirry professional-tasoon"
+  },
   
-  "pricing.enterprise.name": "Yritys",
-  "pricing.enterprise.price": "Räätälöity",
-  "pricing.enterprise.period": "hinnoittelu",
-  "pricing.enterprise.description": "Räätälöity ratkaisu suurille organisaatioille monimutkaisine viestintätarpeineen",
-  "pricing.enterprise.users": "Rajaton määrä käyttäjiä",
-  "pricing.enterprise.conversations": "Rajattomat tekoälykeskustelut",
-  "pricing.enterprise.integrations": "Mukautetut integraatiot ja API-pääsy",
-  "pricing.enterprise.compliance": "Edistyneet compliance-ominaisuudet",
-  "pricing.enterprise.sso": "SSO ja edistynyt turvallisuus",
-  "pricing.enterprise.support": "Oma asiakasmenestyksen hallinta",
-  "pricing.enterprise.sla": "99,9% käyttöaikasopimus",
-  "pricing.enterprise.cta": "Ota yhteyttä myyntiin",
-  "pricing.enterprise.note": "Hinnoittelu räätälöidään organisaatiosi erityisvaatimusten mukaan",
+  "pricing.enterprise": {
+    "name": "Enterprise",
+    "description": "Räätälöidyt ratkaisut suuryrityksille ja erikoisvaatimuksille.",
+    "cta": "Ota yhteyttä myyntiin"
+  },
+  "pricing.features": {
+    "feature": "Ominaisuus",
+    "included": "Sisältyy",
+    "notIncluded": "Ei sisälly",
+    "alsoIncluded": "Sisältyy myös",
+    "custom": "Räätälöity",
+    "unlimited": "Rajoittamaton",
+    "perWeek": "/viikko",
+    "perDay": "/päivä",
+    "freeWithAnnual": "(ilmainen vuosisopimuksella)",
+    "maxOneUser": "Max 1 käyttäjä",
+    "maxTwentyConversations": "Max 20 tekoälykeskustelua/viikko",
+    "maxFivePosts": "Max 5 julkaisua/viikko",
+    "webInterface": "Web-käyttöliittymä",
+    "maxTwoIntegrations": "Max 2 integraatiota",
+    "maxOneAgent": "Max 1 agentti",
+    "limitedCustomization": "Rajoitetut asetukset ja räätälöitävyys",
+    "communicationSuggestions3x": "Viestintäehdotukset 3x/viikko",
+    "guidedOnboarding199": "Opastettu käyttöönotto 199€",
+    "userGuides": "Käyttöoppaat ja koulutuskirjasto",
+    "maxFiftyConversations": "Max 50 tekoälykeskustelua/viikko",
+    "maxTenPosts": "Max 10 julkaisua/viikko",
+    "maxThreeIntegrations": "Max 3 integraatiota",
+    "extensiveCustomization": "Laajat asetukset ja räätälöitävyys",
+    "communicationSuggestions1x": "Viestintäehdotukset 1x/päivä",
+    "userManagement3": "Käyttäjähallinta (max 3 käyttäjää)",
+    "additionalUsers100": "Lisäkäyttäjät 100€/kk",
+    "maxHundredConversations": "Max 100 tekoälykeskustelua/viikko",
+    "unlimitedPosts": "Rajaton määrä julkaisuja",
+    "allIntegrations": "Kaikki saatavilla olevat integraatiot",
+    "additionalAgents50": "Lisäagentit 50€/kk",
+    "customCommunicationSuggestions": "Räätälöidyt viestintäehdotukset",
+    "chatSupport8to20": "Chat-tuki 8-20",
+    "guidedOnboardingFreeAnnual": "Opastettu käyttöönotto (ilmainen vuosisopimuksella)",
+    "userManagement10": "Käyttäjähallinta (max 10 käyttäjää)",
+    "unlimitedConversations": "Rajaton määrä tekoälykeskusteluja",
+    "webSlackTeamsApps": "Web + Slack & Teams -sovellukset",
+    "maxThreeAgents": "Max 3 agenttia",
+    "phoneSupport9to15": "Puhelintuki 9-15",
+    "guidedOnboardingIncluded": "Opastettu käyttöönotto sisältyy",
+    "customInstallation": "Räätälöity asennus ja ominaisuudet",
+    "projectSpecificPricing": "Projektikohtainen hinnoittelu",
+    "allIntegrationsWithAPI": "Kaikki integraatiot + API-rajapinnat",
+    "customFeatures": "Räätälöidyt ominaisuudet",
+    "dedicatedSupport": "Omistettu tuki",
+    "customOnboarding": "Räätälöity käyttöönotto",
+    "price": "Hinta",
+    "users": "Käyttäjät",
+    "conversations": "Keskustelut",
+    "posts": "Julkaisut",
+    "integrations": "Integraatiot",
+    "agents": "Agentit",
+    "webApp": "Web-sovellus",
+    "slack": "Slack",
+    "teams": "Teams",
+    "customization": "Räätälöinti",
+    "communicationSuggestions": "Viestintäehdotukset",
+    "onboarding": "Käyttöönotto",
+    "support": "Tuki",
+    "phoneSupport": "Puhelintuki",
+    "apiAccess": "API-rajapinta"
+  },
+  "pricing.showComparison": "Näytä täydellinen ominaisuusvertailu",
+  "pricing.hideComparison": "Piilota täydellinen ominaisuusvertailu",
+  "pricing.faqTitle": "Kysymyksiä?",
+  "pricing.faqText": "Käy UKK-sivullamme tai ota yhteyttä saadaksesi lisätietoja paketeistamme.",
+  "pricing.faqButton": "Katso UKK",
+  "pricing.contactButton": "Ota yhteyttä myyntiin",
+  "pricing.pricingHeader": {
+    "title": "Selkeä, läpinäkyvä hinnoittelu",
+    "subtitle": "Valitse yrityksesi tarpeisiin sopiva paketti. Kaikki paketit sisältävät keskeisen tekoälytoiminnallisuuden."
+  },
+  "pricing.comparisonCaption": "Täydellinen ominaisuusvertailu kaikista paketeista",
+  "pricing.comparison": {
+    "title": "Ominaisuusvertailu",
+    "subtitle": "Vertaa ominaisuuksia kaikissa paketeissa löytääksesi yrityksellesi sopivan paketin"
+  },
+  "pricing.faq": {
+    "title": "Usein kysytyt kysymykset",
+    "subtitle": "Vastauksia yleisimpiin kysymyksiin hinnoittelustamme ja paketeistamme",
+    "question1": "Mitä tapahtuu, kun kokeilujakso päättyy?",
+    "answer1": "Kun kokeilujaksosi päättyy, voit päivittää johonkin maksulliseen pakettiin jatkaaksesi palvelun käyttöä. Tietosi säilytetään 30 päivän ajan, jos et päivitä välittömästi.",
+    "question2": "Voinko vaihtaa pakettia?",
+    "answer2": "Kyllä, voit päivittää tai alentaa pakettisi milloin tahansa. Jos päivität ylöspäin, muutokset tulevat voimaan välittömästi. Jos alennat pakettia, muutokset tulevat voimaan nykyisen laskutusjakson päättyessä.",
+    "question3": "Tarjoatteko alennuksia voittoa tavoittelemattomille järjestöille tai oppilaitoksille?",
+    "answer3": "Kyllä! Tarjoamme erikoishinnoittelua voittoa tavoittelemattomille järjestöille, oppilaitoksille ja startup-yrityksille. Ota yhteyttä myyntitiimiimme saadaksesi lisätietoja.",
+    "question4": "Mitä maksutapoja hyväksytte?",
+    "answer4": "Hyväksymme kaikki yleisimmät luottokortit, mukaan lukien Visa, Mastercard ja American Express. Yrityspaketille voimme järjestää myös laskutuksen ja pankkisiirrot."
+  },
   
   "pricing.benefits.title": "Mitattava liiketoimintavaikutus",
   "pricing.benefits.efficiency.title": "Viestinnän tehokkuus",
