Fix translation key mismatch in PricingFAQ component - resolves build error and enables deployment

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -22,6 +22,12 @@
   "problems.regulatory.title": "Regulatory Compliance Pressure",
   "problems.regulatory.description": "Increasing regulatory requirements for documentation, audit trails, and multilingual compliance putting additional strain on communication processes.",
 
+  "features.title": "Enterprise Communication Solutions That Scale",
+  "features.speed.title": "Lightning-Fast Message Delivery",
+  "features.speed.description": "AI-powered routing ensures critical messages reach the right people instantly, reducing response times by 75%.",
+  "features.clarity.title": "Crystal-Clear Communication",
+  "features.clarity.description": "AI analyzes and optimizes message clarity, tone, and urgency to eliminate misunderstandings and improve response rates.",
+
   "benefits.title": "Communication Solutions Built for Expert Teams",
   "benefits.speed.title": "Speed & Clarity in Slack and Teams",
   "benefits.speed.description": "Cut through channel noise with AI-powered message prioritization and smart routing. Reduce time spent searching for information by 60%.",
@@ -148,9 +154,10 @@
   "pricing.page.title": "Pricing - Lyyli.ai",
   "pricing.page.description": "Clear pricing for Lyyli.ai's AI communication platform. Try our ROI calculator and see how much you can save with AI-assisted communication.",
   
-  "pricing.tagline": "Pricing plans",
   "pricing.title": "Simple, transparent pricing",
   "pricing.subtitle": "Choose the plan that works best for your business needs. All plans include our core AI functionality.",
+  
+  "pricing.tagline": "Pricing plans",
   "pricing.monthly": "Monthly",
   "pricing.yearly": "Yearly",
   "pricing.save": "Save",
@@ -159,122 +166,107 @@
   "pricing.perYear": "/year",
   "pricing.custom": "Custom",
   
-  "pricing.free": {
-    "name": "Free",
-    "description": "Perfect for trial users, solo entrepreneurs, and small associations.",
-    "cta": "Get started free"
-  },
-  "pricing.starter": {
-    "name": "Starter",
-    "description": "Ideal for small operators and individual professionals.",
-    "cta": "Start free trial"
-  },
-  "pricing.growth": {
-    "name": "Growth",
-    "description": "Everything you need for growing teams and expanding businesses.",
-    "cta": "Start growing"
-  },
+  "pricing.free.name": "Free",
+  "pricing.free.description": "Perfect for trial users, solo entrepreneurs, and small associations.",
+  "pricing.free.cta": "Get started free",
   
-  "pricing.professional": {
-    "name": "Professional",
-    "description": "Complete solution for whole organization use.",
-    "cta": "Go professional"
-  },
+  "pricing.starter.name": "Starter",
+  "pricing.starter.description": "Ideal for small operators and individual professionals.",
+  "pricing.starter.cta": "Start free trial",
   
-  "pricing.enterprise": {
-    "name": "Enterprise",
-    "description": "Custom solutions for large enterprises with special requirements.",
-    "cta": "Contact sales"
-  },
-  "pricing.features": {
-    "feature": "Feature",
-    "included": "Included",
-    "notIncluded": "Not included",
-    "alsoIncluded": "Also included",
-    "custom": "Custom",
-    "unlimited": "Unlimited",
-    "perWeek": "/week",
-    "perDay": "/day",
-    "freeWithAnnual": "(free with annual)",
-    "maxOneUser": "Max 1 user",
-    "maxTwentyConversations": "Max 20 AI conversations/week",
-    "maxFivePosts": "Max 5 posts/week",
-    "webInterface": "Web interface",
-    "maxTwoIntegrations": "Max 2 integrations",
-    "maxOneAgent": "Max 1 agent",
-    "limitedCustomization": "Limited settings and customization",
-    "communicationSuggestions3x": "Communication suggestions 3x/week",
-    "guidedOnboarding199": "Guided onboarding 199€",
-    "userGuides": "User guides and training library",
-    "maxFiftyConversations": "Max 50 AI conversations/week",
-    "maxTenPosts": "Max 10 posts/week",
-    "maxThreeIntegrations": "Max 3 integrations",
-    "extensiveCustomization": "Extensive settings and customization",
-    "communicationSuggestions1x": "Communication suggestions 1x/day",
-    "userManagement3": "User management (max 3 users)",
-    "additionalUsers100": "Additional users 100€/month",
-    "maxHundredConversations": "Max 100 AI conversations/week",
-    "unlimitedPosts": "Unlimited posts",
-    "allIntegrations": "All available integrations",
-    "additionalAgents50": "Additional agents 50€/month",
-    "customCommunicationSuggestions": "Custom communication suggestions",
-    "chatSupport8to20": "Chat support 8-20",
-    "guidedOnboardingFreeAnnual": "Guided onboarding (free with annual)",
-    "userManagement10": "User management (max 10 users)",
-    "unlimitedConversations": "Unlimited AI conversations",
-    "webSlackTeamsApps": "Web + Slack & Teams apps",
-    "maxThreeAgents": "Max 3 agents",
-    "phoneSupport9to15": "Phone support 9-15",
-    "guidedOnboardingIncluded": "Guided onboarding included",
-    "customInstallation": "Custom installation and features",
-    "projectSpecificPricing": "Project-specific pricing",
-    "allIntegrationsWithAPI": "All integrations + API access",
-    "customFeatures": "Custom features",
-    "dedicatedSupport": "Dedicated support",
-    "customOnboarding": "Custom onboarding",
-    "price": "Price",
-    "users": "Users",
-    "conversations": "Conversations",
-    "posts": "Posts",
-    "integrations": "Integrations",
-    "agents": "Agents",
-    "webApp": "Web App",
-    "slack": "Slack",
-    "teams": "Teams",
-    "customization": "Customization",
-    "communicationSuggestions": "Communication Suggestions",
-    "onboarding": "Onboarding",
-    "support": "Support",
-    "phoneSupport": "Phone Support",
-    "apiAccess": "API Access"
-  },
+  "pricing.growth.name": "Growth",
+  "pricing.growth.description": "Everything you need for growing teams and expanding businesses.",
+  "pricing.growth.cta": "Start growing",
+  
+  "pricing.professional.name": "Professional",
+  "pricing.professional.description": "Complete solution for whole organization use.",
+  "pricing.professional.cta": "Go professional",
+  
+  "pricing.enterprise.name": "Enterprise",
+  "pricing.enterprise.description": "Custom solutions for large enterprises with special requirements.",
+  "pricing.enterprise.cta": "Contact sales",
+  
+  "pricing.features.feature": "Feature",
+  "pricing.features.included": "Included",
+  "pricing.features.notIncluded": "Not included",
+  "pricing.features.alsoIncluded": "Also included",
+  "pricing.features.custom": "Custom",
+  "pricing.features.unlimited": "Unlimited",
+  "pricing.features.perWeek": "/week",
+  "pricing.features.perDay": "/day",
+  "pricing.features.freeWithAnnual": "(free with annual)",
+  "pricing.features.maxOneUser": "Max 1 user",
+  "pricing.features.maxTwentyConversations": "Max 20 AI conversations/week",
+  "pricing.features.maxFivePosts": "Max 5 posts/week",
+  "pricing.features.webInterface": "Web interface",
+  "pricing.features.maxTwoIntegrations": "Max 2 integrations",
+  "pricing.features.maxOneAgent": "Max 1 agent",
+  "pricing.features.limitedCustomization": "Limited settings and customization",
+  "pricing.features.communicationSuggestions3x": "Communication suggestions 3x/week",
+  "pricing.features.guidedOnboarding199": "Guided onboarding 199€",
+  "pricing.features.userGuides": "User guides and training library",
+  "pricing.features.maxFiftyConversations": "Max 50 AI conversations/week",
+  "pricing.features.maxTenPosts": "Max 10 posts/week",
+  "pricing.features.maxThreeIntegrations": "Max 3 integrations",
+  "pricing.features.extensiveCustomization": "Extensive settings and customization",
+  "pricing.features.communicationSuggestions1x": "Communication suggestions 1x/day",
+  "pricing.features.userManagement3": "User management (max 3 users)",
+  "pricing.features.additionalUsers100": "Additional users 100€/month",
+  "pricing.features.maxHundredConversations": "Max 100 AI conversations/week",
+  "pricing.features.unlimitedPosts": "Unlimited posts",
+  "pricing.features.allIntegrations": "All available integrations",
+  "pricing.features.additionalAgents50": "Additional agents 50€/month",
+  "pricing.features.customCommunicationSuggestions": "Custom communication suggestions",
+  "pricing.features.chatSupport8to20": "Chat support 8-20",
+  "pricing.features.guidedOnboardingFreeAnnual": "Guided onboarding (free with annual)",
+  "pricing.features.userManagement10": "User management (max 10 users)",
+  "pricing.features.unlimitedConversations": "Unlimited AI conversations",
+  "pricing.features.webSlackTeamsApps": "Web + Slack & Teams apps",
+  "pricing.features.maxThreeAgents": "Max 3 agents",
+  "pricing.features.phoneSupport9to15": "Phone support 9-15",
+  "pricing.features.guidedOnboardingIncluded": "Guided onboarding included",
+  "pricing.features.customInstallation": "Custom installation and features",
+  "pricing.features.projectSpecificPricing": "Project-specific pricing",
+  "pricing.features.allIntegrationsWithAPI": "All integrations + API access",
+  "pricing.features.customFeatures": "Custom features",
+  "pricing.features.dedicatedSupport": "Dedicated support",
+  "pricing.features.customOnboarding": "Custom onboarding",
+  "pricing.features.price": "Price",
+  "pricing.features.users": "Users",
+  "pricing.features.conversations": "Conversations",
+  "pricing.features.posts": "Posts",
+  "pricing.features.integrations": "Integrations",
+  "pricing.features.agents": "Agents",
+  "pricing.features.webApp": "Web App",
+  "pricing.features.slack": "Slack",
+  "pricing.features.teams": "Teams",
+  "pricing.features.customization": "Customization",
+  "pricing.features.communicationSuggestions": "Communication Suggestions",
+  "pricing.features.onboarding": "Onboarding",
+  "pricing.features.support": "Support",
+  "pricing.features.phoneSupport": "Phone Support",
+  "pricing.features.apiAccess": "API Access",
   "pricing.showComparison": "Show full feature comparison",
   "pricing.hideComparison": "Hide full feature comparison",
   "pricing.faqTitle": "Have questions?",
   "pricing.faqText": "Visit our FAQ page or contact us for more information about our plans.",
   "pricing.faqButton": "View FAQ",
   "pricing.contactButton": "Contact sales",
-  "pricing.pricingHeader": {
-    "title": "Simple, transparent pricing",
-    "subtitle": "Choose the plan that works best for your business needs. All plans include our core AI functionality."
-  },
+  "pricing.pricingHeader.title": "Simple, transparent pricing",
+  "pricing.pricingHeader.subtitle": "Choose the plan that works best for your business needs. All plans include our core AI functionality.",
   "pricing.comparisonCaption": "Complete feature comparison across all plans",
-  "pricing.comparison": {
-    "title": "Feature comparison",
-    "subtitle": "Compare features across all plans to find the right fit for your business"
-  },
-  "pricing.faq": {
-    "title": "Frequently asked questions",
-    "subtitle": "Get answers to the most common questions about our pricing and plans",
-    "question1": "What happens when my trial period ends?",
-    "answer1": "When your trial ends, you can choose to upgrade to one of our paid plans to continue using the service. Your data will be preserved for 30 days if you don't upgrade immediately.",
-    "question2": "Can I switch between plans?",
-    "answer2": "Yes, you can upgrade or downgrade your plan at any time. If you upgrade, changes take effect immediately. If you downgrade, changes will take effect at the end of your current billing cycle.",
-    "question3": "Do you offer discounts for non-profits or educational institutions?",
-    "answer3": "Yes! We offer special pricing for non-profit organizations, educational institutions, and startups. Please contact our sales team for more information.",
-    "question4": "What payment methods do you accept?",
-    "answer4": "We accept all major credit cards, including Visa, Mastercard, and American Express. For Enterprise plans, we can also arrange invoicing and bank transfers."
-  },
+  "pricing.comparison.title": "Feature comparison",
+  "pricing.comparison.subtitle": "Compare features across all plans to find the right fit for your business",
+  "pricing.faq.title": "Frequently Asked Questions",
+  "pricing.faq.subtitle": "Get answers to the most common questions about our pricing and plans",
+  "pricing.faq.trial.question": "How long is the free trial?",
+  "pricing.faq.trial.answer": "All plans include a 14-day free trial with full access to features. No credit card required.",
+  "pricing.faq.billing.question": "Can I switch plans at any time?",
+  "pricing.faq.billing.answer": "Yes, you can upgrade or downgrade your plan at any time. Changes take effect at the end of your current billing cycle.",
+  "pricing.faq.enterprise.question": "How is enterprise pricing determined?",
+  "pricing.faq.enterprise.answer": "Enterprise pricing is based on your specific requirements, including user count, integration complexity, and compliance needs.",
+  "pricing.faq.support.question": "What support is included?",
+  "pricing.faq.support.answer": "All plans include comprehensive documentation and onboarding. Professional and Enterprise plans include priority support.",
   
   "pricing.benefits.title": "Measurable Business Impact",
   "pricing.benefits.efficiency.title": "Communication Efficiency",
@@ -285,30 +277,22 @@
   "pricing.benefits.cost.description": "Typical savings for 50-person team through reduced communication overhead",
   "pricing.benefits.roi.title": "Return on Investment",
   "pricing.benefits.roi.value": "340%",
-  "pricing.benefits.roi.description": "Average ROI within 12 months based on efficiency gains and cost reductions",
+  "pricing.benefits.roi.description": "Average ROI in 12 months based on efficiency gains and cost savings",
   
   "pricing.assumptions.title": "ROI Calculation Assumptions",
-  "pricing.assumptions.efficiency": "80% efficiency improvement from automating routine communications",
+  "pricing.assumptions.efficiency": "80% efficiency improvement from routine communication automation",
   "pricing.assumptions.time": "Average 2 hours per week saved per knowledge worker",
-  "pricing.assumptions.cost": "Based on €60/hour average cost for professional services",
+  "pricing.assumptions.cost": "Based on €60/hour average professional service costs",
   "pricing.assumptions.overhead": "Includes reduced meeting time and faster decision-making",
   
-  "pricing.tooltip.conversations": "AI conversations include message generation, translation, and optimization requests",
-  "pricing.tooltip.users": "Active users who can access and use Lyyli features within your organization",
+  "pricing.tooltip.conversations": "AI conversations include message creation, translation, and optimization requests",
+  "pricing.tooltip.users": "Active users who can access Lyyli features in your organization",
   "pricing.tooltip.integrations": "Native apps and API connections to your existing communication tools",
   "pricing.tooltip.analytics": "Detailed reports on communication effectiveness, response times, and team engagement",
   "pricing.tooltip.audit": "Complete logging of all communications with version control and approval workflows",
-  "pricing.tooltip.sla": "Guaranteed uptime with financial credits for any service interruptions",
+  "pricing.tooltip.sla": "Guaranteed uptime with financial credits for service disruptions",
   
-  "pricing.faq.title": "Frequently Asked Questions",
-  "pricing.faq.trial.question": "How long is the free trial?",
-  "pricing.faq.trial.answer": "All plans include a 14-day free trial with full access to features. No credit card required.",
-  "pricing.faq.billing.question": "Can I change plans anytime?",
-  "pricing.faq.billing.answer": "Yes, you can upgrade or downgrade your plan at any time. Changes take effect at the next billing cycle.",
-  "pricing.faq.enterprise.question": "How is Enterprise pricing determined?",
-  "pricing.faq.enterprise.answer": "Enterprise pricing is based on your specific requirements including user count, integration complexity, and compliance needs.",
-  "pricing.faq.support.question": "What support is included?",
-  "pricing.faq.support.answer": "All plans include comprehensive documentation and onboarding. Professional and Enterprise plans include priority support.",
+
 
   "about.page.title": "About - Lyyli.ai",
   "about.page.description": "Learn about Lyyli's mission to transform internal communication for expert-driven organizations. Meet our team and discover why we built Lyyli.",
