--- a/src/translations/fi.json
+++ b/src/translations/fi.json
@@ -171,122 +171,93 @@
   "pricing.perYear": "/vuosi",
   "pricing.custom": "Räätälöity",
   
-  "pricing.free": {
-    "name": "Ilmainen",
-    "description": "Täydellinen kokeilukäyttöön, yksinyrittäjille ja pienille yhdistyksille.",
-    "cta": "Aloita ilmaiseksi"
-  },
-  "pricing.starter": {
-    "name": "Starter",
-    "description": "Ihanteellinen pienille toimijoille ja yksittäisille ammattilaisille.",
-    "cta": "Aloita ilmainen kokeilu"
-  },
-  "pricing.growth": {
-    "name": "Growth",
-    "description": "Kaikki mitä tarvitset kasvavalle tiimille ja laajenevan yrityksen.",
-    "cta": "Aloita kasvu"
-  },
-  
-  "pricing.professional": {
-    "name": "Professional",
-    "description": "Täydellinen ratkaisu koko organisaation käyttöön.",
-    "cta": "Siirry professional-tasoon"
-  },
-  
-  "pricing.enterprise": {
-    "name": "Enterprise",
-    "description": "Räätälöidyt ratkaisut suuryrityksille ja erikoisvaatimuksille.",
-    "cta": "Ota yhteyttä myyntiin"
-  },
-  "pricing.features": {
-    "feature": "Ominaisuus",
-    "included": "Sisältyy",
-    "notIncluded": "Ei sisälly",
-    "alsoIncluded": "Sisältyy myös",
-    "custom": "Räätälöity",
-    "unlimited": "Rajoittamaton",
-    "perWeek": "/viikko",
-    "perDay": "/päivä",
-    "freeWithAnnual": "(ilmainen vuosisopimuksella)",
-    "maxOneUser": "Max 1 käyttäjä",
-    "maxTwentyConversations": "Max 20 tekoälykeskustelua/viikko",
-    "maxFivePosts": "Max 5 julkaisua/viikko",
-    "webInterface": "Web-käyttöliittymä",
-    "maxTwoIntegrations": "Max 2 integraatiota",
-    "maxOneAgent": "Max 1 agentti",
-    "limitedCustomization": "Rajoitetut asetukset ja räätälöitävyys",
-    "communicationSuggestions3x": "Viestintäehdotukset 3x/viikko",
-    "guidedOnboarding199": "Opastettu käyttöönotto 199€",
-    "userGuides": "Käyttöoppaat ja koulutuskirjasto",
-    "maxFiftyConversations": "Max 50 tekoälykeskustelua/viikko",
-    "maxTenPosts": "Max 10 julkaisua/viikko",
-    "maxThreeIntegrations": "Max 3 integraatiota",
-    "extensiveCustomization": "Laajat asetukset ja räätälöitävyys",
-    "communicationSuggestions1x": "Viestintäehdotukset 1x/päivä",
-    "userManagement3": "Käyttäjähallinta (max 3 käyttäjää)",
-    "additionalUsers100": "Lisäkäyttäjät 100€/kk",
-    "maxHundredConversations": "Max 100 tekoälykeskustelua/viikko",
-    "unlimitedPosts": "Rajaton määrä julkaisuja",
-    "allIntegrations": "Kaikki saatavilla olevat integraatiot",
-    "additionalAgents50": "Lisäagentit 50€/kk",
-    "customCommunicationSuggestions": "Räätälöidyt viestintäehdotukset",
-    "chatSupport8to20": "Chat-tuki 8-20",
-    "guidedOnboardingFreeAnnual": "Opastettu käyttöönotto (ilmainen vuosisopimuksella)",
-    "userManagement10": "Käyttäjähallinta (max 10 käyttäjää)",
-    "unlimitedConversations": "Rajaton määrä tekoälykeskusteluja",
-    "webSlackTeamsApps": "Web + Slack & Teams -sovellukset",
-    "maxThreeAgents": "Max 3 agenttia",
-    "phoneSupport9to15": "Puhelintuki 9-15",
-    "guidedOnboardingIncluded": "Opastettu käyttöönotto sisältyy",
-    "customInstallation": "Räätälöity asennus ja ominaisuudet",
-    "projectSpecificPricing": "Projektikohtainen hinnoittelu",
-    "allIntegrationsWithAPI": "Kaikki integraatiot + API-rajapinnat",
-    "customFeatures": "Räätälöidyt ominaisuudet",
-    "dedicatedSupport": "Omistettu tuki",
-    "customOnboarding": "Räätälöity käyttöönotto",
-    "price": "Hinta",
-    "users": "Käyttäjät",
-    "conversations": "Keskustelut",
-    "posts": "Julkaisut",
-    "integrations": "Integraatiot",
-    "agents": "Agentit",
-    "webApp": "Web-sovellus",
-    "slack": "Slack",
-    "teams": "Teams",
-    "customization": "Räätälöinti",
-    "communicationSuggestions": "Viestintäehdotukset",
-    "onboarding": "Käyttöönotto",
-    "support": "Tuki",
-    "phoneSupport": "Puhelintuki",
-    "apiAccess": "API-rajapinta"
-  },
+  "pricing.free.name": "Ilmainen",
+  "pricing.free.description": "Täydellinen kokeilukäyttöön, yksinyrittäjille ja pienille yhdistyksille.",
+  "pricing.free.cta": "Aloita ilmaiseksi",
+  "pricing.starter.name": "Starter",
+  "pricing.starter.description": "Ihanteellinen pienille toimijoille ja yksittäisille ammattilaisille.",
+  "pricing.starter.cta": "Aloita ilmainen kokeilu",
+  "pricing.growth.name": "Growth",
+  "pricing.growth.description": "Kaikki mitä tarvitset kasvavalle tiimille ja laajenevan yrityksen.",
+  "pricing.growth.cta": "Aloita kasvu",
+  "pricing.professional.name": "Professional",
+  "pricing.professional.description": "Täydellinen ratkaisu koko organisaation käyttöön.",
+  "pricing.professional.cta": "Siirry professional-tasoon",
+  "pricing.enterprise.name": "Enterprise",
+  "pricing.enterprise.description": "Räätälöidyt ratkaisut suuryrityksille ja erikoisvaatimuksille.",
+  "pricing.enterprise.cta": "Ota yhteyttä myyntiin",
+  "pricing.features.feature": "Ominaisuus",
+  "pricing.features.included": "Sisältyy",
+  "pricing.features.notIncluded": "Ei sisälly",
+  "pricing.features.alsoIncluded": "Sisältyy myös",
+  "pricing.features.custom": "Räätälöity",
+  "pricing.features.unlimited": "Rajoittamaton",
+  "pricing.features.perWeek": "/viikko",
+  "pricing.features.perDay": "/päivä",
+  "pricing.features.freeWithAnnual": "(ilmainen vuosisopimuksella)",
+  "pricing.features.maxOneUser": "Max 1 käyttäjä",
+  "pricing.features.maxTwentyConversations": "Max 20 tekoälykeskustelua/viikko",
+  "pricing.features.maxFivePosts": "Max 5 julkaisua/viikko",
+  "pricing.features.webInterface": "Web-käyttöliittymä",
+  "pricing.features.maxTwoIntegrations": "Max 2 integraatiota",
+  "pricing.features.maxOneAgent": "Max 1 agentti",
+  "pricing.features.limitedCustomization": "Rajoitetut asetukset ja räätälöitävyys",
+  "pricing.features.communicationSuggestions3x": "Viestintäehdotukset 3x/viikko",
+  "pricing.features.guidedOnboarding199": "Opastettu käyttöönotto 199€",
+  "pricing.features.userGuides": "Käyttöoppaat ja koulutuskirjasto",
+  "pricing.features.maxFiftyConversations": "Max 50 tekoälykeskustelua/viikko",
+  "pricing.features.maxTenPosts": "Max 10 julkaisua/viikko",
+  "pricing.features.maxThreeIntegrations": "Max 3 integraatiota",
+  "pricing.features.extensiveCustomization": "Laajat asetukset ja räätälöitävyys",
+  "pricing.features.communicationSuggestions1x": "Viestintäehdotukset 1x/päivä",
+  "pricing.features.userManagement3": "Käyttäjähallinta (max 3 käyttäjää)",
+  "pricing.features.additionalUsers100": "Lisäkäyttäjät 100€/kk",
+  "pricing.features.maxHundredConversations": "Max 100 tekoälykeskustelua/viikko",
+  "pricing.features.unlimitedPosts": "Rajaton määrä julkaisuja",
+  "pricing.features.allIntegrations": "Kaikki saatavilla olevat integraatiot",
+  "pricing.features.additionalAgents50": "Lisäagentit 50€/kk",
+  "pricing.features.customCommunicationSuggestions": "Räätälöidyt viestintäehdotukset",
+  "pricing.features.chatSupport8to20": "Chat-tuki 8-20",
+  "pricing.features.guidedOnboardingFreeAnnual": "Opastettu käyttöönotto (ilmainen vuosisopimuksella)",
+  "pricing.features.userManagement10": "Käyttäjähallinta (max 10 käyttäjää)",
+  "pricing.features.unlimitedConversations": "Rajaton määrä tekoälykeskusteluja",
+  "pricing.features.webSlackTeamsApps": "Web + Slack & Teams -sovellukset",
+  "pricing.features.maxThreeAgents": "Max 3 agenttia",
+  "pricing.features.phoneSupport9to15": "Puhelintuki 9-15",
+  "pricing.features.guidedOnboardingIncluded": "Opastettu käyttöönotto sisältyy",
+  "pricing.features.customInstallation": "Räätälöity asennus ja ominaisuudet",
+  "pricing.features.projectSpecificPricing": "Projektikohtainen hinnoittelu",
+  "pricing.features.allIntegrationsWithAPI": "Kaikki integraatiot + API-rajapinnat",
+  "pricing.features.customFeatures": "Räätälöidyt ominaisuudet",
+  "pricing.features.dedicatedSupport": "Omistettu tuki",
+  "pricing.features.customOnboarding": "Räätälöity käyttöönotto",
+  "pricing.features.price": "Hinta",
+  "pricing.features.users": "Käyttäjät",
+  "pricing.features.conversations": "Keskustelut",
+  "pricing.features.posts": "Julkaisut",
+  "pricing.features.integrations": "Integraatiot",
+  "pricing.features.agents": "Agentit",
+  "pricing.features.webApp": "Web-sovellus",
+  "pricing.features.slack": "Slack",
+  "pricing.features.teams": "Teams",
+  "pricing.features.customization": "Räätälöinti",
+  "pricing.features.communicationSuggestions": "Viestintäehdotukset",
+  "pricing.features.onboarding": "Käyttöönotto",
+  "pricing.features.support": "Tuki",
+  "pricing.features.phoneSupport": "Puhelintuki",
+  "pricing.features.apiAccess": "API-rajapinta",
   "pricing.showComparison": "Näytä täydellinen ominaisuusvertailu",
   "pricing.hideComparison": "Piilota täydellinen ominaisuusvertailu",
   "pricing.faqTitle": "Kysymyksiä?",
   "pricing.faqText": "Käy UKK-sivullamme tai ota yhteyttä saadaksesi lisätietoja paketeistamme.",
   "pricing.faqButton": "Katso UKK",
   "pricing.contactButton": "Ota yhteyttä myyntiin",
-  "pricing.pricingHeader": {
-    "title": "Selkeä, läpinäkyvä hinnoittelu",
-    "subtitle": "Valitse yrityksesi tarpeisiin sopiva paketti. Kaikki paketit sisältävät keskeisen tekoälytoiminnallisuuden."
-  },
+  "pricing.pricingHeader.title": "Selkeä, läpinäkyvä hinnoittelu",
+  "pricing.pricingHeader.subtitle": "Valitse yrityksesi tarpeisiin sopiva paketti. Kaikki paketit sisältävät keskeisen tekoälytoiminnallisuuden.",
   "pricing.comparisonCaption": "Täydellinen ominaisuusvertailu kaikista paketeista",
-  "pricing.comparison": {
-    "title": "Ominaisuusvertailu",
-    "subtitle": "Vertaa ominaisuuksia kaikissa paketeissa löytääksesi yrityksellesi sopivan paketin"
-  },
-  "pricing.faq": {
-    "title": "Usein kysytyt kysymykset",
-    "subtitle": "Vastauksia yleisimpiin kysymyksiin hinnoittelustamme ja paketeistamme",
-    "question1": "Mitä tapahtuu, kun kokeilujakso päättyy?",
-    "answer1": "Kun kokeilujaksosi päättyy, voit päivittää johonkin maksulliseen pakettiin jatkaaksesi palvelun käyttöä. Tietosi säilytetään 30 päivän ajan, jos et päivitä välittömästi.",
-    "question2": "Voinko vaihtaa pakettia?",
-    "answer2": "Kyllä, voit päivittää tai alentaa pakettisi milloin tahansa. Jos päivität ylöspäin, muutokset tulevat voimaan välittömästi. Jos alennat pakettia, muutokset tulevat voimaan nykyisen laskutusjakson päättyessä.",
-    "question3": "Tarjoatteko alennuksia voittoa tavoittelemattomille järjestöille tai oppilaitoksille?",
-    "answer3": "Kyllä! Tarjoamme erikoishinnoittelua voittoa tavoittelemattomille järjestöille, oppilaitoksille ja startup-yrityksille. Ota yhteyttä myyntitiimiimme saadaksesi lisätietoja.",
-    "question4": "Mitä maksutapoja hyväksytte?",
-    "answer4": "Hyväksymme kaikki yleisimmät luottokortit, mukaan lukien Visa, Mastercard ja American Express. Yrityspaketille voimme järjestää myös laskutuksen ja pankkisiirrot."
-  },
+  "pricing.comparison.title": "Ominaisuusvertailu",
+  "pricing.comparison.subtitle": "Vertaa ominaisuuksia kaikissa paketeissa löytääksesi yrityksellesi sopivan paketin",
+
   
   "pricing.benefits.title": "Mitattava liiketoimintavaikutus",
   "pricing.benefits.efficiency.title": "Viestinnän tehokkuus",
